@@ -1,3 +1,8 @@
+2021-07-08  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-log-buffer-mode): New variable.
+	(ebuild-run-command): Use it.
+
 2021-07-05  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode.el (ebuild-mode-eapi-list): Add EAPI 8.
